Fixed css uneven css and added home

--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -1,3 +1,8 @@
+* {
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     font-size: 20px;
